--- a/app/templates/user_blog_post.html
+++ b/app/templates/user_blog_post.html
@@ -295,7 +295,8 @@
 				<span>{{activity.activity_guest}} <time datetime="2012-11-03">{{activity.activity_time}}</time></span>
 			</div>
 		</article>
-        <form class="add_comments">
+        <form method='POST' class="add_comments" action="/activity/apply" id="thisform">
+            <input type="hidden" name="activity_id" value={{activity.activity_id}}>
 			<input type="submit" value="点我参与" />
 		</form><!-- .add_comments -->
 		<div class="comments_blog">
