--- a/app/templates/user_blog.html
+++ b/app/templates/user_blog.html
@@ -177,36 +177,18 @@
       <div class="grid_12">
         <nav class="primary">
           <ul>
-            <li class="curent"><a href="index.html">Home</a></li>
-            <li><a href="catalog_grid.html">Solids</a></li>
-            <li><a href="catalog_grid.html">Liquids</a></li>
+            <li class="curent"><a href="{{url_for('general')}}">主页</a></li>
+            <li><a href="{{url_for('book_list')}}">图书</a></li>
+            <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">Spray</a>
+              <a href="catalog_grid.html">用户</a>
               <ul class="sub">
-                <li><a href="catalog_grid.html">For home</a></li>
-                <li><a href="catalog_grid.html">For Garden</a></li>
-                <li><a href="catalog_grid.html">For Car</a></li>
-                <li><a href="catalog_grid.html">Other spray</a></li>
-              </ul>
-            </li>
-            <li><a href="catalog_grid.html">Electric</a></li>
-            <li><a href="catalog_grid.html">For cars</a></li>
-	    <li>
-              <a href="#">All pages</a>
-              <ul class="sub">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="text_page.html">Typography and basic styles</a></li>
-		<li><a href="catalog_grid.html">Catalog (grid view)</a></li>
-		<li><a href="catalog_list.html">Catalog (list type view)</a></li>
-		<li><a href="product_page.html">Product view</a></li>
-		<li><a href="shopping_cart.html">Shoping cart</a></li>
-		<li><a href="checkout.html">Proceed to checkout</a></li>
-		<li><a href="compare.html">Products comparison</a></li>
-		<li><a href="login.html">Login</a></li>
-		<li><a href="contact_us.html">Contact us</a></li>
-		<li><a href="404.html">404</a></li>
-		<li><a href="blog.html">Blog posts</a></li>
-		<li><a href="blog_post.html">Blog post view</a></li>
+                <li><a href="{{url_for('user_home')}}">主页</a></li>
+                <li><a href=" {{url_for('cart')}}">购物车</a></li>
+                <li><a href="{{url_for('user_order')}}">订单</a></li>
+                <li><a href="{{url_for('collect')}}">收藏夹</a></li>
+                <li><a href="{{url_for('bookshelf')}}">书架</a></li>
+                
               </ul>
             </li>
           </ul>
@@ -229,111 +211,6 @@
   
   <section id="main">
     <div class="container_12">
-       <div id="sidebar" class="grid_3">
-	      <aside id="categories_nav">
-		     <h3>Blog Categories</h3>
-		     
-		     <nav class="left_menu">
-			    <ul>
-				   <li><a href="#">Entertainment</a></li>
-				   <li><a href="#">Fashion</a></li>
-				   <li><a href="#">Sports</a></li>
-				   <li><a href="#">Vacation</a></li>
-				   <li><a href="#">Movies</a></li>
-				   <li><a href="#">Relationships</a></li>
-				   <li class="last"><a href="#">Food</a></li>
-			    </ul>
-		     </nav><!-- .left_menu -->
-	      </aside><!-- #categories_nav -->
-	      
-	      <aside id="manufacturers">
-		     <h3>Archives</h3>
-		     
-		     <nav class="left_menu">
-			    <ul>
-				   <li><a href="#">August 2012</a></li>
-				   <li><a href="#">September 2012</a></li>
-				   <li><a href="#">October 2012</a></li>
-				   <li><a href="#">November 2012</a></li>
-				   <li class="last"><a href="#">December 2012</a></li>
-			    </ul>
-		     </nav><!-- .left_menu -->
-	      </aside><!-- #categories_nav -->
-	      
-	      <aside id="tags">
-		     <h3>Tags</h3>
-		     <a class="t1" href="#">california</a>
-		     <a class="t2" href="#">canada</a>
-		     <a class="t3" href="#">canon</a>
-		     <a class="t4" href="#">cat</a>
-		     <a class="t5" href="#">chicago</a>
-		     <a class="t6" href="#">christmas</a>
-		     <a class="t7" href="#">mars</a>
-		     <a class="t8" href="#">church</a>
-		     <a class="t9" href="#">city</a>
-		     <a class="t10" href="#">clouds</a>
-		     <a class="t11" href="#">color</a>
-		     <a class="t12" href="#">concert</a>
-		     <a class="t13" href="#">dance</a>
-		     <a class="t14" href="#">day</a>
-		     <a class="t15" href="#">dog</a>
-		     <a class="t16" href="#">england</a>
-		     <a class="t17" href="#">europe</a>
-	      </aside><!-- #tags -->
-	      
-	      <aside id="newsletter_signup">
-		     <h3>Newsletter Signup</h3>
-		     <p>Phasellus vel ultricies felis. Duis 
-		     rhoncus risus eu urna pretium.</p>
-		     
-		     <form class="newsletter">
-			    <input type="email" name="newsletter" class="your_email" value="" placeholder="Enter your email address..."/>
-			    <input type="submit" id="submit" value="Subscribe" />
-		     </form>
-	      </aside><!-- #newsletter_signup -->
-	      
-	      <aside id="banners">
-		<a id="ban_next" class="next arows" href="#"><span>Next</span></a>
-		<a id="ban_prev" class="prev arows" href="#"><span>Prev</span></a>
-		
-		<h3>Banners</h3>
-		     
-		<div class="list_carousel">
-			<ul id="list_banners">
-				<li class="banner"><a href="#">
-					<div class="prev">
-						<img src="images/banner.png" alt="" title="" />
-					</div><!-- .prev -->
-					
-					<h2>New smells</h2>
-              
-					<p>in the next series</p>
- 			        </a></li>
-				
-				<li class="banner"><a href="#">
-					<div class="prev">
-						<img src="images/banner.png" alt="" title="" />
-					</div><!-- .prev -->
-					
-					<h2>New smells</h2>
-              
-					<p>in the next series</p>
- 			        </a></li>
-				
-				<li class="banner"><a href="#">
-					<div class="prev">
-						<img src="images/banner.png" alt="" title="" />
-					</div><!-- .prev -->
-					
-					<h2>New smells</h2>
-              
-					<p>in the next series</p>
- 			        </a></li>
-			</ul>
-		</div><!-- .list_carousel -->
-	      </aside><!-- #banners -->
-	      
-       </div><!-- .sidebar -->
       
        <div id="content" class="grid_9">
 		<h1 class="page_title">活动</h1>
