--- a/app/templates/user_collect.html
+++ b/app/templates/user_collect.html
@@ -172,36 +172,18 @@
       <div class="grid_12">
         <nav class="primary">
           <ul>
-            <li class="curent"><a href="index.html">Home</a></li>
-            <li><a href="catalog_grid.html">Solids</a></li>
-            <li><a href="catalog_grid.html">Liquids</a></li>
+            <li class="curent"><a href="{{url_for('general')}}">主页</a></li>
+            <li><a href="{{url_for('book_list')}}">图书</a></li>
+            <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">Spray</a>
+              <a href="catalog_grid.html">用户</a>
               <ul class="sub">
-                <li><a href="catalog_grid.html">For home</a></li>
-                <li><a href="catalog_grid.html">For Garden</a></li>
-                <li><a href="catalog_grid.html">For Car</a></li>
-                <li><a href="catalog_grid.html">Other spray</a></li>
-              </ul>
-            </li>
-            <li><a href="catalog_grid.html">Electric</a></li>
-            <li><a href="catalog_grid.html">For cars</a></li>
-	    <li>
-              <a href="#">All pages</a>
-              <ul class="sub">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="text_page.html">Typography and basic styles</a></li>
-		<li><a href="catalog_grid.html">Catalog (grid view)</a></li>
-		<li><a href="catalog_list.html">Catalog (list type view)</a></li>
-		<li><a href="product_page.html">Product view</a></li>
-		<li><a href="shopping_cart.html">Shoping cart</a></li>
-		<li><a href="checkout.html">Proceed to checkout</a></li>
-		<li><a href="compare.html">Products comparison</a></li>
-		<li><a href="login.html">Login</a></li>
-		<li><a href="contact_us.html">Contact us</a></li>
-		<li><a href="404.html">404</a></li>
-		<li><a href="blog.html">Blog posts</a></li>
-		<li><a href="blog_post.html">Blog post view</a></li>
+                <li><a href="{{url_for('user_home')}}">主页</a></li>
+                <li><a href=" {{url_for('cart')}}">购物车</a></li>
+                <li><a href="{{url_for('user_order')}}">订单</a></li>
+                <li><a href="{{url_for('collect')}}">收藏夹</a></li>
+                <li><a href="{{url_for('bookshelf')}}">书架</a></li>
+                
               </ul>
             </li>
           </ul>
@@ -224,94 +206,6 @@
   
   <section id="main">
     <div class="container_12">
-       <div id="sidebar" class="grid_3">
-	      <aside id="categories_nav">
-		     <h3>Categories</h3>
-		     
-		     <nav class="left_menu">
-			    <ul>
-				   <li><a href="#">Solids <span>(21)</span></a></li>
-				   <li><a href="#">Liquids <span> (27)</span></a></li>
-				   <li><a href="#">Spray <span>(33)</span></a></li>
-				   <li><a href="#">Electric <span>(17)</span></a></li>
-				   <li><a href="#">For Cars <span>(23)</span></a></li>
-				   <li><a href="#">For Room <span>(7)</span></a></li>
-				   <li class="last"><a href="#">Other <span>(135)</span></a></li>
-			    </ul>
-		     </nav><!-- .left_menu -->
-	      </aside><!-- #categories_nav -->
-	      
-	      <aside id="shop_by">
-		     <h3>Shop By</h3>
-		     
-		     <div class="currently_shopping">
-			    <p>Currently Shopping by:</p>
-			    <ul>
-				   <li><a title="close" class="close" href="#"></a>Price: <span>$0.00 - $999.99</span></li>
-				   <li><a title="close" class="close" href="#"></a>Manufacturer: <span>Apple</span></li>
-			    </ul>
-			    
-			    <a class="clear_all" href="#">Clear All</a>
-			    
-			    <div class="clear"></div>
-		     </div><!-- .currently_shopping -->
-		     
-		     <h4>Category</h4>
-		     
-		     <form action="#" class="check_opt">
-			    <p><input class="niceCheck" type="checkbox" >For Home (23)</p>
-			    <p><input class="niceCheck" type="checkbox" name="" value="">For Car (27)</p>
-			    <p><input class="niceCheck" type="checkbox" name="" value="">For Office (9)</p>
-		     </form>
-		     
-		     <h4>Price</h4>
-		     
-		     <form action="#" class="check_opt">
-			    <p><input class="niceCheck" type="checkbox" name="" value="">0.00 - $49.99 (21)</p>
-			    <p><input class="niceCheck" type="checkbox" name="" value="">$50.00 - $99.99 (7)</p>
-			    <p><input class="niceCheck" type="checkbox" name="" value="">0$100.00 and above (15)</p>
-		     </form>
-	      </aside><!-- #shop_by -->
-	      
-	      <aside id="specials" class="specials">
-		     <h3>Specials</h3>
-		     
-		     <ul>
-			    <li>
-				   <div class="prev">
-					  <a href="product_page.html"><img src="images/special1.png" alt="" title="" /></a>
-				   </div>
-				   
-				   <div class="cont">
-					  <a href="product_page.html">Honeysuckle Flameless Luminary Refill</a>
-					  <div class="prise"><span class="old">$177.00</span>$75.00</div>
-				   </div>   
-			    </li>
-			    
-			    <li>
-				   <div class="prev">
-					  <a href="product_page.html"><img src="images/special2.png" alt="" title="" /></a>
-				   </div>
-				   
-				   <div class="cont">
-					  <a href="product_page.html">Honeysuckle Flameless Luminary Refill</a>
-					  <div class="prise"><span class="old">$177.00</span>$75.00</div>
-				   </div>   
-			    </li>
-		     </ul>
-	      </aside><!-- #specials -->
-	      
-	      <aside id="newsletter_signup">
-		     <h3>Newsletter Signup</h3>
-		     <p>Phasellus vel ultricies felis. Duis 
-		     rhoncus risus eu urna pretium.</p>
-		     
-		     <form class="newsletter">
-			    <input type="email" name="newsletter" class="your_email" value="" placeholder="Enter your email address..."/>
-			    <input type="submit" id="submit" value="Subscribe" />
-		     </form>
-	      </aside><!-- #newsletter_signup -->
-       </div><!-- .sidebar -->
       
        <div id="content" class="grid_9">
 	      <h1 class="page_title">Product List</h1>
