--- a/app/templates/user_product_page.html
+++ b/app/templates/user_product_page.html
@@ -188,36 +188,18 @@
       <div class="grid_12">
         <nav class="primary">
           <ul>
-            <li class="curent"><a href="index.html">Home</a></li>
-            <li><a href="catalog_grid.html">Solids</a></li>
-            <li><a href="catalog_grid.html">Liquids</a></li>
+            <li class="curent"><a href="{{url_for('general')}}">主页</a></li>
+            <li><a href="{{url_for('book_list')}}">图书</a></li>
+            <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">Spray</a>
+              <a href="catalog_grid.html">用户</a>
               <ul class="sub">
-                <li><a href="catalog_grid.html">For home</a></li>
-                <li><a href="catalog_grid.html">For Garden</a></li>
-                <li><a href="catalog_grid.html">For Car</a></li>
-                <li><a href="catalog_grid.html">Other spray</a></li>
-              </ul>
-            </li>
-            <li><a href="catalog_grid.html">Electric</a></li>
-            <li><a href="catalog_grid.html">For cars</a></li>
-	    <li>
-              <a href="#">All pages</a>
-              <ul class="sub">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="text_page.html">Typography and basic styles</a></li>
-		<li><a href="catalog_grid.html">Catalog (grid view)</a></li>
-		<li><a href="catalog_list.html">Catalog (list type view)</a></li>
-		<li><a href="product_page.html">Product view</a></li>
-		<li><a href="shopping_cart.html">Shoping cart</a></li>
-		<li><a href="checkout.html">Proceed to checkout</a></li>
-		<li><a href="compare.html">Products comparison</a></li>
-		<li><a href="login.html">Login</a></li>
-		<li><a href="contact_us.html">Contact us</a></li>
-		<li><a href="404.html">404</a></li>
-		<li><a href="blog.html">Blog posts</a></li>
-		<li><a href="blog_post.html">Blog post view</a></li>
+                <li><a href="{{url_for('user_home')}}">主页</a></li>
+                <li><a href=" {{url_for('cart')}}">购物车</a></li>
+                <li><a href="{{url_for('user_order')}}">订单</a></li>
+                <li><a href="{{url_for('collect')}}">收藏夹</a></li>
+                <li><a href="{{url_for('bookshelf')}}">书架</a></li>
+                
               </ul>
             </li>
           </ul>
@@ -473,106 +455,7 @@
 			</div><!-- .grid_9 -->
 
 			<div class="clear"></div>
-
-			<div class="related">
-				<div class="c_header">
-					<div class="grid_7">
-						<h2>Related Products</h2>
-					</div><!-- .grid_7 -->
-
-					<div class="grid_2">
-						<a id="next_c1" class="next arows" href="#"><span>Next</span></a>
-						<a id="prev_c1" class="prev arows" href="#"><span>Prev</span></a>
-					</div><!-- .grid_2 -->
-				</div><!-- .c_header -->
-
-				<div class="list_carousel">
-
-				<ul id="list_product" class="list_product">
-					<li class="">
-						<div class="grid_3 product">
-							<img class="sale" src="images/sale.png" alt="Sale"/>
-							<div class="prev">
-								<a href="product_page.html"><img src="images/product_1.png" alt="" title="" /></a>
-							</div><!-- .prev -->
-							<h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-							<div class="cart">
-								<div class="price">
-									<div class="vert">
-										<div class="price_new">$550.00</div>
-										<div class="price_old">$725.00</div>
-									</div>
-								</div>
-								<a href="#" class="obn"></a>
-								<a href="#" class="like"></a>
-								<a href="#" class="bay"></a>
-							</div><!-- .cart -->
-						</div><!-- .grid_3 -->
-					</li>
-
-					<li class="">
-						<div class="grid_3 product">
-							<div class="prev">
-								<a href="product_page.html"><img src="images/product_2.png" alt="" title="" /></a>
-							</div><!-- .prev -->
-							<h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-							<div class="cart">
-								<div class="price">
-									<div class="vert">
-										<div class="price_new">$550.00</div>
-										<div class="price_old">$725.00</div>
-									</div>
-								</div>
-								<a href="#" class="obn"></a>
-								<a href="#" class="like"></a>
-								<a href="#" class="bay"></a>
-							</div><!-- .cart -->
-						</div><!-- .grid_3 -->
-					</li>
-
-					<li class="">
-						<div class="grid_3 product">
-							<div class="prev">
-								<a href="product_page.html"><img src="images/product_3.png" alt="" title="" /></a>
-							</div><!-- .prev -->
-							<h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-							<div class="cart">
-								<div class="price">
-									<div class="vert">
-										<div class="price_new">$550.00</div>
-										<div class="price_old">$725.00</div>
-									</div>
-								</div>
-								<a href="#" class="obn"></a>
-								<a href="#" class="like"></a>
-								<a href="#" class="bay"></a>
-							</div><!-- .cart -->
-						</div><!-- .grid_3 -->
-					</li>
-
-					<li class="">
-						<div class="grid_3 product">
-							<div class="prev">
-								<a href="product_page.html"><img src="images/product_4.png" alt="" title="" /></a>
-							</div><!-- .prev -->
-							<h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-							<div class="cart">
-								<div class="price">
-									<div class="vert">
-										<div class="price_new">$550.00</div>
-										<div class="price_old">$725.00</div>
-									</div>
-								</div>
-								<a href="#" class="obn"></a>
-								<a href="#" class="like"></a>
-								<a href="#" class="bay"></a>
-							</div><!-- .cart -->
-						</div><!-- .grid_3 -->
-					</li>
-			        </ul><!-- #list_product -->
-				</div><!-- .list_carousel -->
-			</div><!-- .carousel -->
-		</div><!-- .product_page -->
+        </div><!-- .product_page -->
 		<div class="clear"></div>
 
        </div><!-- #content -->
