--- a/app/templates/user_shopping_cart.html
+++ b/app/templates/user_shopping_cart.html
@@ -171,36 +171,18 @@
       <div class="grid_12">
         <nav class="primary">
           <ul>
-            <li class="curent"><a href="index.html">Home</a></li>
-            <li><a href="catalog_grid.html">Solids</a></li>
-            <li><a href="catalog_grid.html">Liquids</a></li>
+            <li class="curent"><a href="{{url_for('general')}}">主页</a></li>
+            <li><a href="{{url_for('book_list')}}">图书</a></li>
+            <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">Spray</a>
+              <a href="catalog_grid.html">用户</a>
               <ul class="sub">
-                <li><a href="catalog_grid.html">For home</a></li>
-                <li><a href="catalog_grid.html">For Garden</a></li>
-                <li><a href="catalog_grid.html">For Car</a></li>
-                <li><a href="catalog_grid.html">Other spray</a></li>
-              </ul>
-            </li>
-            <li><a href="catalog_grid.html">Electric</a></li>
-            <li><a href="catalog_grid.html">For cars</a></li>
-	    <li>
-              <a href="#">All pages</a>
-              <ul class="sub">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="text_page.html">Typography and basic styles</a></li>
-		<li><a href="catalog_grid.html">Catalog (grid view)</a></li>
-		<li><a href="catalog_list.html">Catalog (list type view)</a></li>
-		<li><a href="product_page.html">Product view</a></li>
-		<li><a href="shopping_cart.html">Shoping cart</a></li>
-		<li><a href="checkout.html">Proceed to checkout</a></li>
-		<li><a href="compare.html">Products comparison</a></li>
-		<li><a href="login.html">Login</a></li>
-		<li><a href="contact_us.html">Contact us</a></li>
-		<li><a href="404.html">404</a></li>
-		<li><a href="blog.html">Blog posts</a></li>
-		<li><a href="blog_post.html">Blog post view</a></li>
+                <li><a href="{{url_for('user_home')}}">主页</a></li>
+                <li><a href=" {{url_for('cart')}}">购物车</a></li>
+                <li><a href="{{url_for('user_order')}}">订单</a></li>
+                <li><a href="{{url_for('collect')}}">收藏夹</a></li>
+                <li><a href="{{url_for('bookshelf')}}">书架</a></li>
+                
               </ul>
             </li>
           </ul>
@@ -251,189 +233,12 @@
        </div><!-- .grid_12 -->
 
        <div id="content_bottom">
-        <div class="grid_4">
-          <div class="bottom_block estimate">
-            <h3>Estimate Shipping and Tax</h3>
-            <p>Enter your destination to get a shipping estimate.</p>
-	    <form>
-	      <p>
-		     <strong>Country:</strong><sup class="surely">*</sup><br/>
-		     <select>
-			    <option>United States</option>
-			    <option>United States</option>
-		     </select>
-	      </p>
-	      <p>
-		     <strong>State/Province:</strong><br/>
-		     <select>
-			    <option>Please select region, state or province</option>
-			    <option>Please select region, state or province</option>
-		     </select>
-	      </p>
-	      <p>
-		     <strong>Zip/Postal Code</strong><br/>
-		     <input type="text" name="" value="" />
-	      </p>
-	      <input type="submit" id="get_estimate" value="Get a Quote" />
-	    </form>
-
-          </div><!-- .estimate -->
-        </div><!-- .grid_4 -->
-
-        <div class="grid_4">
-          <div class="bottom_block discount">
-            <h3>Discount Codes</h3>
-            <p>Enter your coupon code if you have one.</p>
-	    <form>
-	      <p>
-		     <input type="text" name="" value="" placeholder="United States"/>
-	      </p>
-	      <input type="submit" id="apply_coupon" value="Apply Coupon" />
-	    </form>
-          </div><!-- .discount -->
-        </div><!-- .grid_4 -->
-
-        <div class="grid_4">
-          <div class="bottom_block total">
-	      <table class="subtotal">
-		     <tr>
-			    <td>Subtotal</td><td class="price">$1, 500.00</td>
-		     </tr>
-		     <tr class="grand_total">
-			    <td>Grand Total</td><td class="price">$1, 500.00</td>
-		     </tr>
-	      </table>
-	    <button class="checkout">PROCEED TO CHECKOUT</button>
-            <a href="#">Checkout with Multiple Addresses</a>
-          </div><!-- .total -->
-        </div><!-- .grid_4 -->
 
         <div class="clear"></div>
       </div><!-- #content_bottom -->
       <div class="clear"></div>
 
       <div class="clear"></div>
-
-      <div class="carousel" id="following">
-        <div class="c_header">
-          <div class="grid_10">
-            <h5>Based on your selection, you may be interested in the following item:</h5>
-          </div><!-- .grid_10 -->
-
-          <div class="grid_2">
-            <a id="next_c1" class="next arows" href="#"><span>Next</span></a>
-            <a id="prev_c1" class="prev arows" href="#"><span>Prev</span></a>
-           </div><!-- .grid_2 -->
-        </div><!-- .c_header -->
-
-        <div class="list_carousel">
-
-        <ul id="list_product" class="list_product">
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_1.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_2.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_3.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_4.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_5.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-        </ul><!-- #list_product -->
-        </div><!-- .list_carousel -->
-      </div><!-- .carousel -->
 
     </div><!-- .container_12 -->
   </section><!-- #main -->
