--- a/app/templates/manage_orderlist.html
+++ b/app/templates/manage_orderlist.html
@@ -425,21 +425,17 @@
                                                 <th>价格</th>
                                                 <th>时间</th>
                                                 <th>状态</th>
-                                                <th>加入</th>
+                                                <th>操作</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            {% for order in orders%}
+                                            {% for order in orders %}
                                             <tr>
                                                 <td>{{order.order_id}}</td>
                                                 <td>{{order.order_price}}</td>
                                                 <td>{{order.order_time}}</td>
                                                 <td>{{order.order_status}}</td>
-                                                <form method="POST" action='/order/confirm' id="order_confirm">
-                                                <input type="hidden" value={{order.order_id}} name="order_id">
-                                                <td><input type="button" name="ifbuy" value="付款" onclick=></td>
-                                                <td><button type="submit" form="order_confirm" value="提交">fukuan</button></td>
-                                                </form>
+                                                <td><a href="{{url_for('order_confirm',order_id=order.order_id)}}">确认付款</a></td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
@@ -458,7 +454,7 @@
                                                                 <from class="form-horizontal form-material">
                                                                     <div class="form-group">
                                                                         <div class="col-md-12 m-b-20">
-                                                                            <input type="text" class="form-control" placeholder="用户名" name="user_name"> </div>
+                                                                            <input type="text" class="form-control" placeholder="用户名" name="keyword"> </div>
                                                                     </div>
                                                                 </from>
                                                             </div>
