--- a/app/templates/manage_booklist.html
+++ b/app/templates/manage_booklist.html
@@ -455,15 +455,16 @@
                                                 </td>
                                                 <div id="add-contact" class="modal fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                                     <div class="modal-dialog">
+                                                    <form method='POST' action="/book/list" id="search_activity" name="search_activity" enctype="multipart/form-data">
                                                         <div class="modal-content">
                                                           
                                                             <div class="modal-header">
                                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                                                <h4 class="modal-title" id="myModalLabel">输入书名</h4> </div>
+                                                                <h4 class="modal-title" id="myModalLabel">输入关键字</h4> </div>
                                                             <div class="modal-body">
                                                                     <div class="form-group">
                                                                         <div class="col-md-12 m-b-20">
-                                                                            <input type="text" class="form-control" placeholder="书名" name="book_name"> </div>
+                                                                            <input type="text" class="form-control" placeholder="书名或作者" name="keyword"> </div>
                                                                     </div>
                                                             </div>
                                                             <div class="modal-footer">
@@ -477,6 +478,7 @@
                                                     </div>
                                                     <!-- /.modal-dialog -->
                                                 </div>
+                                                </form>
                                                 <td colspan="7">
                                                     <div class="text-right">
                                                         <ul class="pagination"> </ul>
