--- a/app/templates/user_evaluate.html
+++ b/app/templates/user_evaluate.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="shortcut icon" href="images/favicon.html">
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <title>Catalog (list type view)</title>
+  <title>Login</title>
 
   <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}">
   <link href="{{url_for('static',filename='css/userstyle.css')}}" media="screen" rel="stylesheet" type="text/css">
@@ -16,7 +15,7 @@
  
   <script src="{{url_for('static',filename='js/jquery-1.7.2.min.js')}}" ></script>
   <script src="{{url_for('static',filename='js/html5.js')}}" ></script>
-  <script src="{{url_for('static',filename='js/jflow.plus.js')}}" ></script>
+  <script src="{{url_for('static',filename='js/jflow.plus.js')}}"></script>
   <script src="{{url_for('static',filename='js/jquery.carouFredSel-5.2.2-packed.js')}}"></script>
   <script src="{{url_for('static',filename='js/checkbox.js')}}"></script>
   <script src="{{url_for('static',filename='js/radio.js')}}"></script>
@@ -30,7 +29,7 @@
 
   <script>
 	$(document).ready(function(){
-	    $("#myController").jFlow({
+		$("#myController").jFlow({
 			controller: ".control", // must be class, use . sign
 			slideWrapper : "#jFlowSlider", // must be id, use # sign
 			slides: "#slider",  // the div where all your sliding divs are nested in
@@ -56,6 +55,12 @@
 		next: '#next_c2',
 		auto: false
 	  });
+	  $('#list_banners').carouFredSel({
+		prev: '#ban_prev',
+		next: '#ban_next',
+		scroll: 1,
+		auto: false
+	  });
 	  $(window).resize();
 	});
   </script>
@@ -67,10 +72,41 @@
        })
   </script>
     
- </head>
+</head>
 <body>
   <div class="container_12">
-
+    <div id="top">
+      <div class="grid_3">
+        <div class="phone_top">
+          Call Us +777 (100) 1234
+        </div><!-- .phone_top -->
+      </div><!-- .grid_3 -->
+   
+      <div class="grid_6">
+        <div class="welcome">
+          Welcome visitor you can <a href="login.html">login</a> or <a href="login.html">create an account</a>.
+        </div><!-- .welcome -->
+      </div><!-- .grid_6 -->
+   
+      <div class="grid_3">
+        <div class="valuta">
+          <ul>
+            <li class="curent"><a href="#">$</a></li>
+            <li><a href="#">&#8364;</a></li>
+            <li><a href="#">&#163;</a></li>
+          </ul>
+        </div><!-- .valuta -->
+    
+        <div class="lang">
+          <ul>
+            <li class="curent"><a href="#">EN</a></li>
+            <li><a href="#">FR</a></li>
+            <li><a href="#">GM</a></li>
+          </ul>
+        </div><!-- .lang -->
+      </div><!-- .grid_3 -->
+    </div><!-- #top -->
+  
     <div class="clear"></div>
    
     <header id="branding">
@@ -164,123 +200,46 @@
   
   <div class="clear"></div>
   
-  <div class="container_12">
-    <div class="grid_12">
-       <div class="breadcrumbs">
-	      <a href="index.html">Home</a><span>&#8250;</span><a href="#">Category</a><span>&#8250;</span><span class="current">This page</span>
-       </div><!-- .breadcrumbs -->
-    </div><!-- .grid_12 -->
-  </div><!-- .container_12 -->
-  
-  <div class="clear"></div>
-  
-  <section id="main">
-    <div class="container_12">
-       <div id="content" class="grid_9">
-	      <h1 class="page_title">书架</h1>
-	      
-	      <div class="options">
-		     <div class="grid-list">
-			   <a class="grid" href="catalog_grid.html"><span>img</span></a>
-			   <a class="list curent" href="index.html"><span>img</span></a>
-		     </div><!-- .grid-list -->
-		     
-		     <div class="show">
-			    Show
-			    <select>
-				   <option>1</option>
-				   <option>2</option>
-				   <option>3</option>
-				   <option>4</option>
-				   <option>5</option>
-				   <option>6</option>
-				   <option>7</option>
-				   <option>8</option>
-				   <option>9</option>
-				   <option>10</option>
-				   <option>11</option>
-				   <option>12</option>
-			     </select>
-			    
-			    per page
-		     </div><!-- .show -->
-		     
-		     <div class="sort">
-			   Sort By
-			    <select>
-				   <option>Position</option>
-				   <option>Price</option>
-				   <option>Rating</option>
-				   <option>Name</option>
-			     </select>
-			    
-			    <a class="sort_up" href="#">&#8593;</a>
-		     </div><!-- .sort -->
-	      </div><!-- .options -->
-	      
-	      <div class="listing_product">
-            {% for book in book_list%}
-			<div class="product_li">
-				<div class="grid_3">
-					<img class="sale" src="images/new.png" alt="New"/>
-					<div class="prev">
-						<a href="product_page.html"><img src="{{url_for('static',filename=book['image'])}}" alt="" title="" /></a>
-					</div><!-- .prev -->
-				</div><!-- .grid_3 -->
+  <section id="main" class="entire_width">
+    <div class="container_12">      
+       <div id="content">
+		<div class="grid_12">
+			<h1 class="page_title">Login or Create an Account</h1>
+		</div><!-- .grid_12 -->
+		
+		<div class="grid_6 new_customers">
+			<h2>New Customers</h2>
+			<p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
+			<div class="clear"></div>
+			<button class="account">添加评论</button>
+                </div><!-- .grid_6 -->
+		
+		<div class="grid_6">
+			<form class="registed" method="post">
+				<h2>Registed Customers</h2>
+							
+				<p>If you have an account with us, please log in.</p>
+							
+				<div class="email">
+					<strong>评分:</strong><sup class="surely">*</sup><br/>
+					<input type="number" name="scort" min="1" max="10" class=""/>
+				</div><!-- .email -->
+							
+				<div class="password">
+					<strong>内容：</strong><sup class="surely">*</sup><br/>
+					<input type="text" name="message" class="" value="" />
+				</div><!-- .password -->
 				
-				<div class="grid_4">
-					<div class="entry_content">
-						<a href="{{url_for('book_detail',book_id=book['id'])}}"><h3 class="title">{{book['name']}}</h3></a>
-						<div class="review">
-							<a class="plus" href="#"></a>
-							<a class="plus" href="#"></a>
-							<a class="plus" href="#"></a>
-							<a href="#"></a>
-							<a href="#"></a>
-							<span>1 REVIEW(S)</span>
-						</div>
-						<p>{{book['message']}}</p>
-						<a class="more" href="product_page.html">Learn More</a>
-					</div><!-- .entry_content -->
-				</div><!-- .grid_4 -->
-                
 				
-				<div class="grid_2">
-					<div class="cart">
-						<div class="price">
-							<div class="price_new">${{book['price']}}</div>
-							<div class="price_old">$725.00</div>
-						</div>
-						<a href="{{url_for('book_evaluate',book_id=book['id'])}}" class="bay">添加评论</a>
-					</div><!-- .cart -->
-				</div><!-- .grid_2 -->
-				
-				<div class="clear"></div>
-			</div><!-- .article -->
-			{% endfor %}
-	      <div class="clear"></div>
-	      </div><!-- .listing_product -->
-	      
-	      <div class="clear"></div>
-	      
-	      <div class="pagination">
-		     <ul>
-			    <li class="prev"><span>&#8592;</span></li>
-			    <li class="curent"><a href="#">1</a></li>
-			    <li><a href="#">2</a></li>
-			    <li><a href="#">3</a></li>
-			    <li><a href="#">4</a></li>
-			    <li><a href="#">5</a></li>
-			    <li><span>...</span></li>
-			    <li><a href="#">100</a></li>
-			    <li class="next"><a href="#">&#8594;</a></li>
-		     </ul>
-	      </div><!-- .pagination -->
-	      <p class="pagination_info">Displaying 1 to 12 (of 100 products)</p>
+				<div class="submit">										
+					<input type="submit" value="Login" />
+					<sup class="surely">*</sup><span>Required Field</span>
+				</div><!-- .submit -->
+			</form><!-- .registed -->
+                </div><!-- .grid_6 -->
        </div><!-- #content -->
        
       <div class="clear"></div>
-      
     </div><!-- .container_12 -->
   </section><!-- #main -->
   
